[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Quiz/ChallangeListScene.gd" type="Script" id=1]
[ext_resource path="res://Assets/Quiz/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="ChallangeListScene" type="Node2D"]
script = ExtResource( 1 )
vbxcontainer = NodePath("VBoxContainer")
background = NodePath("CanvasLayer/TextureRect")
saveButton = NodePath("ButtonLayer/TextureButton")
upButton = NodePath("upButton")
downButton = NodePath("downButton")

[node name="Label" type="Label" parent="."]
margin_left = 7.0
margin_top = 10.0
margin_right = 567.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 1 )
text = "Question List"
align = 1
valign = 1

[node name="ChallengeLabel" type="Label" parent="."]
margin_left = 7.0
margin_top = 890.0
margin_right = 567.0
margin_bottom = 1010.0
custom_fonts/font = SubResource( 1 )
text = "CHALLENGE"
align = 1
valign = 1

[node name="VBoxContainer" type="ScrollContainer" parent="."]
margin_left = 10.0
margin_top = 138.0
margin_right = 565.0
margin_bottom = 868.0
mouse_filter = 2

[node name="upButton" type="TextureButton" parent="."]
margin_left = 453.104
margin_top = 150.0
margin_right = 533.104
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="downButton" type="TextureButton" parent="."]
margin_left = 453.104
margin_top = 734.917
margin_right = 533.104
margin_bottom = 814.917
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ButtonLayer" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = -1

[node name="TextureButton" type="TextureButton" parent="ButtonLayer"]
margin_left = 7.0
margin_top = 890.0
margin_right = 567.0
margin_bottom = 1010.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
[connection signal="pressed" from="downButton" to="." method="_on_downButton_pressed"]
